Cover get resource method.
